--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doc2</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <footer class="footer">
@@ -13,6 +13,7 @@
     
     <nav class="navbar">
         <a href="index.html">Home</a>     
+        <a href="pageA.html">Alfabet</a>  
         <div class="dropdown">
           <button class="dropbtn">Menu
             <i class="fa fa-caret-down"></i>
