--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <footer class="footer"> 
+    <header class="header"> 
         <h1>Hallo</h1>       
         <h2>Welkom, . . .</h2>
-    </footer>
+    </header>
     
     <nav class="navbar">
         <a href="index.html">Home</a>     
