--- a/page1.html
+++ b/page1.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <footer class="footer">
+    <header class="header">
         <h1>Page1</h1>
         <h2>Welcome, . . . .</h2>
        
-    </footer>
+    </header>
     
     <nav class="navbar">
         <a href="index.html">Home</a>   
