--- a/page4.html
+++ b/page4.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <footer class="footer">
+    <header class="header">
         <h1>Page4</h1>
         
-    </footer>
+    </header>
     
     <nav class="navbar">
         <a href="index.html">Home</a>     
