--- a/page2.html
+++ b/page2.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <footer class="footer">
+    <header class="header">
         <h1>Page2</h1>
         
-    </footer>
+    </header>
     
     <nav class="navbar">
         <a href="index.html">Home</a>     
