--- a/pageA.html
+++ b/pageA.html
@@ -29,7 +29,7 @@
           </div>    
         </nav>
         
-        <main class="mn">
+        <main class="mn-board">
 
           <div class="board">
             <div class="aa"><p>ج</p><audio class="sound" src="soundAlf/jeem.mp3"></audio></div>
